--- a/po/gl/ktp-common-internals.po
+++ b/po/gl/ktp-common-internals.po
@@ -4,19 +4,20 @@
 # Xosé <xosecalvo@gmail.com>, 2012.
 # Adrian Chaves Fernandez <adriyetichaves@gmail.com>, 2012.
 # Miguel Branco <mgl.branco@gmail.com>, 2013.
+# Marce Villarino <mvillarino@kde-espana.es>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2013-04-13 11:41+0200\n"
-"PO-Revision-Date: 2013-01-13 15:58+0100\n"
-"Last-Translator: Miguel Branco <mgl.branco@gmail.com>\n"
+"POT-Creation-Date: 2013-05-14 19:08+0200\n"
+"PO-Revision-Date: 2013-04-21 09:32+0200\n"
+"Last-Translator: Marce Villarino <mvillarino@kde-espana.es>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.5\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Environment: kde\n"
 "X-Accelerator-Marker: &\n"
@@ -32,62 +33,59 @@ msgstr "adriyetichaves@gmail.com"
 
 #: contact-info-dialog.cpp:66
 msgid "Full name:"
-msgstr ""
+msgstr "Nome completo:"
 
 #: contact-info-dialog.cpp:67
 msgid "Nickname:"
-msgstr ""
+msgstr "Alcume:"
 
 #: contact-info-dialog.cpp:68
 msgid "Email:"
-msgstr ""
+msgstr "Correo electrónico:"
 
 #: contact-info-dialog.cpp:69
 msgid "Phone:"
-msgstr ""
+msgstr "Teléfono:"
 
 #: contact-info-dialog.cpp:70
 msgid "Homepage:"
-msgstr ""
+msgstr "Páxina web:"
 
 #: contact-info-dialog.cpp:71
 msgid "Birthday:"
-msgstr ""
+msgstr "Aniversario:"
 
 #: contact-info-dialog.cpp:72
 msgid "Organization:"
-msgstr ""
+msgstr "Organización:"
 
 #: contact-info-dialog.cpp:140
 msgid "Change Avatar"
-msgstr ""
+msgstr "Cambiar o avatar"
 
 #: contact-info-dialog.cpp:145
-#, fuzzy
 msgid "Clear Avatar"
-msgstr "Limpar a lista"
+msgstr "Limpar o avatar"
 
 #: contact-info-dialog.cpp:210
-#, fuzzy
 msgid "Failed to load the new avatar image"
-msgstr "Non foi posíbel crear o novo contacto."
+msgstr "Non foi posíbel crear a nova imaxe o avatar"
 
 #: contact-info-dialog.cpp:328
 msgid "Save"
-msgstr ""
+msgstr "Gardar"
 
 #: contact-info-dialog.cpp:363
 msgid "Contact can see when you are online:"
-msgstr ""
+msgstr "Este contacto pode ver cando está vostede ligado:"
 
 #: contact-info-dialog.cpp:364
 msgid "You can see when the contact is online:"
-msgstr ""
+msgstr "Vostede pode ver cando o contacto está ligado:"
 
 #: contact-info-dialog.cpp:365
-#, fuzzy
 msgid "Contact is blocked:"
-msgstr "O contacto está desconectado"
+msgstr "Este contacto está bloqueado:"
 
 #: error-dictionary.cpp:37
 msgctxt "Verbose user visible error string"
@@ -651,7 +649,7 @@ msgstr "Erro descoñecido"
 msgid "No Kopete logs found"
 msgstr "Non se atopou ningún historial de Kopete."
 
-#: logs-importer-private.cpp:328 logs-importer-private.cpp:335
+#: logs-importer-private.cpp:333 logs-importer-private.cpp:340
 msgid "Invalid Kopete log format"
 msgstr "O formato do historial de Kopete non é válido."
 
@@ -677,7 +675,7 @@ msgstr "Desactivado"
 
 #: Models/groups-tree-proxy-model.cpp:61
 msgid "Unsorted"
-msgstr ""
+msgstr "Sen ordenar"
 
 #: Models/rooms-model.cpp:72
 msgid "Password required"
