--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ktp-common-internals (0.6.2-1) UNRELEASED; urgency=low
   [ Diane Trout ]
   * Imported Upstream version 0.6.2
   * Set Uploaders to Diane Trout and Michał Zając
+  * Add kde-telepathy-debugger package (Thanks: Ubuntu)
 
  -- Diane Trout <diane@ghic.org>  Fri, 24 May 2013 21:17:36 -0700
 
