Update libktpcommoninteralsprivate soversion to 5
* Update libktpcommoninteralsprivate soversion to 5
* Install qml components

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ ktp-common-internals (0.6.2-1) UNRELEASED; urgency=low
   * Imported Upstream version 0.6.2
   * Set Uploaders to Diane Trout and Michał Zając
   * Add kde-telepathy-debugger package (Thanks: Ubuntu)
+  * Update libktpcommoninteralsprivate soversion to 5
+  * Install qml components
 
  -- Diane Trout <diane@ghic.org>  Fri, 24 May 2013 21:17:36 -0700
 
