Improve a little kde-telepathy-data's long description.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ ktp-common-internals (0.6.2-1) UNRELEASED; urgency=low
   * Updated to Standards-Version 3.9.4. No changes needed.
   * Add symbols file for libktpcommoninternalsprivate5
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Improve a little kde-telepathy-data's long description.
+
  -- Diane Trout <diane@ghic.org>  Fri, 24 May 2013 21:17:36 -0700
 
 ktp-common-internals (0.4.0-1) unstable; urgency=low
