--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
+ktp-common-internals (0.6.80-1) UNRELEASED; urgency=low
+
+  * Imported upstream 0.6.80
+
+ -- Diane Trout <diane@ghic.org>  Tue, 24 Sep 2013 21:26:49 -0700
+
 ktp-common-internals (0.6.3-1) unstable; urgency=low
 
+  [ Mark Purcell ]
   * Imported Upstream version 0.6.3  
   * Drop marginally useful libktpcommoninternalsprivate5.symbols
     - Fixes "FTBFS: symbols differ from expectations" (Closes: #719048)
 
- -- Mark Purcell <msp@debian.org>  Sat, 10 Aug 2013 09:19:39 +1000
+ -- Diane Trout <diane@ghic.org>  Tue, 24 Sep 2013 21:26:42 -0700
 
 ktp-common-internals (0.6.2-1) unstable; urgency=low
 
