--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,17 @@
 ktp-common-internals (0.6.80-1) UNRELEASED; urgency=low
 
   * Imported upstream 0.6.80
+  * Ship new libraries libktploggerprivate.
+  * Ship plugins imdetailswidgetplugin, im_persons_data_source_plugin,
+    ktploggerplugin, ktp_kpeople_plugin, nepomuktelepathyservice
+  * Bump libktpcommoninternalsprivate SONAME to 6
 
  -- Diane Trout <diane@ghic.org>  Tue, 24 Sep 2013 21:26:49 -0700
 
 ktp-common-internals (0.6.3-1) unstable; urgency=low
 
   [ Mark Purcell ]
-  * Imported Upstream version 0.6.3  
+  * Imported Upstream version 0.6.3
   * Drop marginally useful libktpcommoninternalsprivate5.symbols
     - Fixes "FTBFS: symbols differ from expectations" (Closes: #719048)
 
@@ -32,7 +36,7 @@ ktp-common-internals (0.6.2-1) unstable; urgency=low
   * Improve a little kde-telepathy-data's long description.
 
   [ Mark Purcell ]
-  * Add myself to Uploaders 
+  * Add myself to Uploaders
 
  -- Mark Purcell <msp@debian.org>  Sat, 03 Aug 2013 13:49:22 +1000
 
