--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ ktp-common-internals (0.6.80-1) UNRELEASED; urgency=low
   * Ship plugins imdetailswidgetplugin, im_persons_data_source_plugin,
     ktploggerplugin, ktp_kpeople_plugin, nepomuktelepathyservice
   * Bump libktpcommoninternalsprivate SONAME to 6
+  * Add desktop and service files for new plugins
 
  -- Diane Trout <diane@ghic.org>  Tue, 24 Sep 2013 21:26:49 -0700
 
