--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-ktp-common-internals (0.6.80-1) UNRELEASED; urgency=low
+ktp-common-internals (0.7.0) UNRELEASED; urgency=low
 
-  * Imported upstream 0.6.80
+  * Imported upstream 0.7.0
   * Ship new libraries libktploggerprivate.
   * Ship plugins imdetailswidgetplugin, im_persons_data_source_plugin,
     ktploggerplugin, ktp_kpeople_plugin, nepomuktelepathyservice
   * Bump libktpcommoninternalsprivate SONAME to 6
   * Add desktop and service files for new plugins
 
- -- Diane Trout <diane@ghic.org>  Tue, 24 Sep 2013 21:26:49 -0700
+ -- Diane Trout <diane@ghic.org>  Tue, 29 Oct 2013 19:13:05 -0700
 
 ktp-common-internals (0.6.3-1) unstable; urgency=low
 
