--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ ktp-common-internals (0.7.0-1) UNRELEASED; urgency=low
     ktploggerplugin, ktp_kpeople_plugin, nepomuktelepathyservice
   * Bump libktpcommoninternalsprivate SONAME to 6
   * Add desktop and service files for new plugins
+  * Split kpeople nepomuk support into a seperate package.
 
  -- Diane Trout <diane@ghic.org>  Tue, 29 Oct 2013 19:13:05 -0700
 
