--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ktp-common-internals (0.7.0-1) UNRELEASED; urgency=low
   * Bump libktpcommoninternalsprivate SONAME to 6
   * Add desktop and service files for new plugins
   * Split kpeople nepomuk support into a separate package.
+    KPeople is currently disabled as recommended by upstream.
 
  -- Diane Trout <diane@ghic.org>  Tue, 29 Oct 2013 19:13:05 -0700
 
