releasing package ktp-common-internals version 0.7.0-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (0.7.0-1) UNRELEASED; urgency=low
+ktp-common-internals (0.7.0-1) unstable; urgency=low
 
   * Imported upstream 0.7.0
   * Ship new libraries libktploggerprivate.
@@ -9,7 +9,7 @@ ktp-common-internals (0.7.0-1) UNRELEASED; urgency=low
   * Split kpeople nepomuk support into a separate package.
     KPeople is currently disabled as recommended by upstream.
 
- -- Diane Trout <diane@ghic.org>  Tue, 29 Oct 2013 19:13:05 -0700
+ -- Diane Trout <diane@ghic.org>  Tue, 05 Nov 2013 09:54:57 -0800
 
 ktp-common-internals (0.6.3-1) unstable; urgency=low
 
