--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (0.7.80-1) UNRELEASED; urgency=medium
+
+  * Imported upstream 0.7.80
+
+ -- Diane Trout <diane@ghic.org>  Tue, 18 Feb 2014 22:59:59 -0800
+
 ktp-common-internals (0.7.0-1) unstable; urgency=low
 
   * Imported upstream 0.7.0
