--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ktp-common-internals (0.7.80-1) UNRELEASED; urgency=medium
 
   * Imported upstream 0.7.80
+  * Bump libktpcommoninternalsprivate6 SONAME to 7
 
  -- Diane Trout <diane@ghic.org>  Tue, 18 Feb 2014 22:59:59 -0800
 
