--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ktp-common-internals (0.8.0-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.9.5. No changes needed.
   * Enable kpeople
   * Split libraries from common-internals into additional packages.
+  * Add symbols files.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Apr 2014 21:53:01 -0700
 
