--- a/po/nds/ktp-common-internals.po
+++ b/po/nds/ktp-common-internals.po
@@ -1,107 +1,114 @@
 # translation of telepathy-common-internals.po to Low Saxon
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
-# Manfred Wiese <m.j.wiese@web.de>, 2011.
+# Manfred Wiese <m.j.wiese@web.de>, 2011, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: telepathy-common-internals\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2013-11-02 04:50+0000\n"
-"PO-Revision-Date: 2011-10-25 19:24+0200\n"
+"POT-Creation-Date: 2014-03-12 05:55+0000\n"
+"PO-Revision-Date: 2014-03-17 11:01+0100\n"
 "Last-Translator: Manfred Wiese <m.j.wiese@web.de>\n"
 "Language-Team: Low Saxon <kde-i18n-nds@kde.org>\n"
 "Language: nds\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.0\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr ""
+msgstr "Manfred Wiese"
 
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr ""
+msgstr "m.j.wiese@web.de"
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:134
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:136
 #, kde-format
 msgid "Start Chat Using %1..."
 msgstr ""
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:144
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:146
 #, kde-format
 msgid "Start Audio Call Using %1..."
 msgstr ""
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:154
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:156
 #, kde-format
 msgid "Start Video Call Using %1..."
 msgstr ""
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:165
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:167
 #, kde-format
 msgid "Send a File Using %1..."
 msgstr ""
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:176
+#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:178
 #, kde-format
 msgid "Collaboratively edit a document Using %1..."
 msgstr ""
 
-#: kpeople/actionsplugin/kpeople-actions-plugin.cpp:187
-msgid "Open Log Viewer..."
+#: kpeople/uiplugins/imdetailswidget.cpp:48
+msgid "IM"
+msgstr "KN"
+
+#: KTp/actions.cpp:181
+#, kde-format
+msgid ""
+"Transferring files with .exe or .ini extension is not allowed by Google "
+"Talk. It was sent with filename <i>%1</i>"
 msgstr ""
 
-#: kpeople/uiplugins/imdetailswidget.cpp:44
-msgid "Instant Messaging Accounts"
+#: KTp/actions.cpp:182
+msgid "Transferred file renamed"
 msgstr ""
 
 #: KTp/contact-info-dialog.cpp:66
 msgid "Full name:"
-msgstr ""
+msgstr "Heel Naam:"
 
 #: KTp/contact-info-dialog.cpp:67
 msgid "Nickname:"
-msgstr ""
+msgstr "Ökelnaam:"
 
 #: KTp/contact-info-dialog.cpp:68
 msgid "Email:"
-msgstr ""
+msgstr "Nettpostadress:"
 
 #: KTp/contact-info-dialog.cpp:69
 msgid "Phone:"
-msgstr ""
+msgstr "Telefoon:"
 
 #: KTp/contact-info-dialog.cpp:70
 msgid "Homepage:"
-msgstr ""
+msgstr "Tohuussiet:"
 
 #: KTp/contact-info-dialog.cpp:71
 msgid "Birthday:"
-msgstr ""
+msgstr "Geboortsdag:"
 
 #: KTp/contact-info-dialog.cpp:72
 msgid "Organization:"
-msgstr ""
+msgstr "Organisatschoon:"
 
 #: KTp/contact-info-dialog.cpp:144
 msgid "Change Avatar"
-msgstr ""
+msgstr "Bildteken ännern"
 
 #: KTp/contact-info-dialog.cpp:149
 msgid "Clear Avatar"
-msgstr ""
+msgstr "Bildteken leddig maken"
 
 #: KTp/contact-info-dialog.cpp:214
 msgid "Failed to load the new avatar image"
-msgstr ""
+msgstr "Nieg Bildteken lett sik nich laden."
 
 #: KTp/contact-info-dialog.cpp:332
 msgid "Save"
-msgstr ""
+msgstr "Sekern"
 
 #: KTp/contact-info-dialog.cpp:367
 msgid "Contact can see when you are online:"
@@ -205,12 +212,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:67
 msgctxt "Verbose user visible error string"
 msgid "You have been banned from the channel"
-msgstr ""
+msgstr "Du büst ut den Klöönruum utslaten worrn."
 
 #: KTp/error-dictionary.cpp:69
 msgctxt "Verbose user visible error string"
 msgid "The channel is full"
-msgstr ""
+msgstr "De Klöönruum is vull."
 
 #: KTp/error-dictionary.cpp:71
 msgctxt "Verbose user visible error string"
@@ -220,27 +227,27 @@ msgstr ""
 #: KTp/error-dictionary.cpp:73
 msgctxt "Verbose user visible error string"
 msgid "You have been kicked from the channel"
-msgstr ""
+msgstr "Du büst ut den Klöönruum rutsmeten worrn."
 
 #: KTp/error-dictionary.cpp:75
 msgctxt "Verbose user visible error string"
 msgid "An unexpected error has occurred"
-msgstr ""
+msgstr "Dat geev en nich verwacht Fehler."
 
 #: KTp/error-dictionary.cpp:77
 msgctxt "Verbose user visible error string"
 msgid "Could not establish connection"
-msgstr ""
+msgstr "Verbinnen lett sik nich opstellen"
 
 #: KTp/error-dictionary.cpp:79
 msgctxt "Verbose user visible error string"
 msgid "Connection to server was lost"
-msgstr ""
+msgstr "Verbinnen na Server is afreten"
 
 #: KTp/error-dictionary.cpp:81
 msgctxt "Verbose user visible error string"
 msgid "Server refused your connection"
-msgstr ""
+msgstr "Server hett Dien Verbinnen afwiest"
 
 #: KTp/error-dictionary.cpp:83
 msgctxt "Verbose user visible error string"
@@ -252,7 +259,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:85
 msgctxt "Verbose user visible error string"
 msgid "You have been disconnected"
-msgstr ""
+msgstr "Dien Verbinnen wöör afkoppelt"
 
 #: KTp/error-dictionary.cpp:87
 msgctxt "Verbose user visible error string"
@@ -297,7 +304,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:103
 msgctxt "Verbose user visible error string"
 msgid "The service is not available"
-msgstr ""
+msgstr "De Deenst is nich verföögbor"
 
 #: KTp/error-dictionary.cpp:105
 msgctxt "Verbose user visible error string"
@@ -307,12 +314,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:107
 msgctxt "Verbose user visible error string"
 msgid "This operation is not implemented"
-msgstr ""
+msgstr "Disse Akschoon is nich inbuut"
 
 #: KTp/error-dictionary.cpp:109
 msgctxt "Verbose user visible error string"
 msgid "This operation is not yet implemented"
-msgstr ""
+msgstr "Disse Akschoon is noch nich inbuut"
 
 #: KTp/error-dictionary.cpp:111
 msgctxt "Verbose user visible error string"
@@ -337,7 +344,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:119
 msgctxt "Verbose user visible error string"
 msgid "Account with this username already exists"
-msgstr ""
+msgstr "Dat gifft al en Togang mit dissen Brukernaam"
 
 #: KTp/error-dictionary.cpp:121
 msgctxt "Verbose user visible error string"
@@ -400,7 +407,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:146
 msgctxt "Short user visible error string"
 msgid "Authentication failed"
-msgstr ""
+msgstr "Identiteetprööv fehlslaan"
 
 #: KTp/error-dictionary.cpp:148
 msgctxt "Short user visible error string"
@@ -415,7 +422,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:152
 msgctxt "Short user visible error string"
 msgid "Certificate is expired"
-msgstr ""
+msgstr "Zertifikaat is aflopen"
 
 #: KTp/error-dictionary.cpp:154
 msgctxt "Short user visible error string"
@@ -435,7 +442,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:160
 msgctxt "Short user visible error string"
 msgid "Invalid certificate"
-msgstr ""
+msgstr "Leeg Zertifikaat"
 
 #: KTp/error-dictionary.cpp:162
 msgctxt "Short user visible error string"
@@ -455,7 +462,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:168
 msgctxt "Short user visible error string"
 msgid "Certificate revoked"
-msgstr ""
+msgstr "Zertifikaat torüchropen"
 
 #: KTp/error-dictionary.cpp:170
 msgctxt "Short user visible error string"
@@ -470,12 +477,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:174
 msgctxt "Short user visible error string"
 msgid "Banned from channel"
-msgstr ""
+msgstr "Ut Ruum utslaten"
 
 #: KTp/error-dictionary.cpp:176
 msgctxt "Short user visible error string"
 msgid "The channel is full"
-msgstr ""
+msgstr "De Klöönruum is vull."
 
 #: KTp/error-dictionary.cpp:178
 msgctxt "Short user visible error string"
@@ -485,7 +492,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:180
 msgctxt "Short user visible error string"
 msgid "Kicked from channel"
-msgstr ""
+msgstr "Ut Ruum rutsmeten"
 
 #: KTp/error-dictionary.cpp:182
 msgctxt "Short user visible error string"
@@ -495,17 +502,17 @@ msgstr ""
 #: KTp/error-dictionary.cpp:184
 msgctxt "Short user visible error string"
 msgid "Connection failed"
-msgstr ""
+msgstr "Tokoppeln fehlslaan"
 
 #: KTp/error-dictionary.cpp:186
 msgctxt "Short user visible error string"
 msgid "Connection lost"
-msgstr ""
+msgstr "Verbinnen afreten"
 
 #: KTp/error-dictionary.cpp:188
 msgctxt "Short user visible error string"
 msgid "Connection refused"
-msgstr ""
+msgstr "Tokoppeln afwiest"
 
 #: KTp/error-dictionary.cpp:190
 msgctxt "Short user visible error string"
@@ -515,7 +522,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:192
 msgctxt "Short user visible error string"
 msgid "Disconnected"
-msgstr ""
+msgstr "Afkoppelt"
 
 #: KTp/error-dictionary.cpp:194
 msgctxt "Short user visible error string"
@@ -530,17 +537,17 @@ msgstr ""
 #: KTp/error-dictionary.cpp:198
 msgctxt "Short user visible error string"
 msgid "Encryption error"
-msgstr ""
+msgstr "Fehler bi't Verslöteln"
 
 #: KTp/error-dictionary.cpp:200
 msgctxt "Short user visible error string"
 msgid "Encryption not available"
-msgstr ""
+msgstr "Verslöteln nich verföögbor"
 
 #: KTp/error-dictionary.cpp:202
 msgctxt "Short user visible error string"
 msgid "Invalid argument"
-msgstr ""
+msgstr "Leeg Argument"
 
 #: KTp/error-dictionary.cpp:204
 msgctxt "Short user visible error string"
@@ -550,7 +557,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:206
 msgctxt "Short user visible error string"
 msgid "Network error"
-msgstr ""
+msgstr "Nettwarkfehler"
 
 #: KTp/error-dictionary.cpp:208
 msgctxt "Short user visible error string"
@@ -560,7 +567,7 @@ msgstr ""
 #: KTp/error-dictionary.cpp:210
 msgctxt "Short user visible error string"
 msgid "Service not available"
-msgstr ""
+msgstr "Deenst is nich verföögbor"
 
 #: KTp/error-dictionary.cpp:212
 msgctxt "Short user visible error string"
@@ -570,12 +577,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:214
 msgctxt "Short user visible error string"
 msgid "Operation not implemented"
-msgstr ""
+msgstr "Akschoon is nich inbuut"
 
 #: KTp/error-dictionary.cpp:216
 msgctxt "Short user visible error string"
 msgid "Operation not yet implemented"
-msgstr ""
+msgstr "Akschoon is noch nich inbuut"
 
 #: KTp/error-dictionary.cpp:218
 msgctxt "Short user visible error string"
@@ -585,12 +592,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:220
 msgctxt "Short user visible error string"
 msgid "Contact is offline"
-msgstr ""
+msgstr "Kontakt is afkoppelt."
 
 #: KTp/error-dictionary.cpp:222
 msgctxt "Short user visible error string"
 msgid "Operation not permitted"
-msgstr ""
+msgstr "Akschoon nich tolaten"
 
 #: KTp/error-dictionary.cpp:224
 msgctxt "Short user visible error string"
@@ -600,12 +607,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:226
 msgctxt "Short user visible error string"
 msgid "Username already taken"
-msgstr ""
+msgstr "Brukernaam nich mehr free"
 
 #: KTp/error-dictionary.cpp:228
 msgctxt "Short user visible error string"
 msgid "Call rejected"
-msgstr ""
+msgstr "Anroop afwiest"
 
 #: KTp/error-dictionary.cpp:230
 msgctxt "Short user visible error string"
@@ -620,12 +627,12 @@ msgstr ""
 #: KTp/error-dictionary.cpp:234
 msgctxt "Short user visible error string"
 msgid "Internal error"
-msgstr ""
+msgstr "Intern Fehler"
 
 #: KTp/error-dictionary.cpp:236
 msgctxt "Short user visible error string"
 msgid "Software upgrade required"
-msgstr ""
+msgstr "Programmopfrischen deit noot"
 
 #: KTp/error-dictionary.cpp:238
 msgctxt "Short user visible error string"
@@ -645,11 +652,11 @@ msgstr ""
 #: KTp/error-dictionary.cpp:246
 msgctxt "User visible error string"
 msgid "Unknown error"
-msgstr ""
+msgstr "Nich begäng Fehler"
 
 #: KTp/logs-importer-private.cpp:52
 msgid "No Kopete logs found"
-msgstr ""
+msgstr "Keen Kopete-Logbook funnen"
 
 #: KTp/logs-importer-private.cpp:333 KTp/logs-importer-private.cpp:340
 msgid "Invalid Kopete log format"
@@ -658,30 +665,30 @@ msgstr ""
 #: KTp/Models/accounts-list-model.cpp:261
 msgctxt "This is a connection state"
 msgid "Connecting"
-msgstr ""
+msgstr "Bi to tokoppeln"
 
 #: KTp/Models/accounts-list-model.cpp:263
 msgctxt "This is a connection state"
 msgid "Disconnected"
-msgstr ""
+msgstr "Afkoppelt"
 
 #: KTp/Models/accounts-list-model.cpp:265
 msgctxt "This is an unknown connection state"
 msgid "Unknown"
-msgstr ""
+msgstr "Nich begäng"
 
 #: KTp/Models/accounts-list-model.cpp:268
 msgctxt "This is a disabled account"
 msgid "Disabled"
-msgstr ""
+msgstr "Utmaakt"
 
 #: KTp/Models/groups-tree-proxy-model.cpp:61
 msgid "Unsorted"
-msgstr ""
+msgstr "Nich sorteert"
 
 #: KTp/Models/rooms-model.cpp:72
 msgid "Password required"
-msgstr ""
+msgstr "Passwoort deit noot"
 
 #: KTp/Models/rooms-model.cpp:74
 msgid "No password required"
@@ -694,12 +701,12 @@ msgstr ""
 #: KTp/Models/rooms-model.cpp:114
 msgctxt "Chatrooms name"
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 #: KTp/Models/rooms-model.cpp:116
 msgctxt "Chatrooms description"
 msgid "Description"
-msgstr ""
+msgstr "Beschrieven"
 
 #: KTp/presence.cpp:95
 msgctxt "IM presence: a person is available"
@@ -709,7 +716,7 @@ msgstr ""
 #: KTp/presence.cpp:97
 msgctxt "IM presence: a person is busy"
 msgid "Busy"
-msgstr ""
+msgstr "Hett to doon"
 
 #: KTp/presence.cpp:99
 msgctxt "IM presence: a person is away"
@@ -724,12 +731,12 @@ msgstr ""
 #: KTp/presence.cpp:103
 msgctxt "IM presence: a person is invisible"
 msgid "Invisible"
-msgstr ""
+msgstr "Nich sichtbor"
 
 #: KTp/presence.cpp:105
 msgctxt "IM presence: a person is offline"
 msgid "Offline"
-msgstr ""
+msgstr "Afkoppelt"
 
 #: KTp/telepathy-handler-application.cpp:113
 msgid "Persistent mode (do not exit on timeout)"
@@ -741,13 +748,13 @@ msgstr ""
 
 #: KTp/telepathy-handler-application.cpp:115
 msgid "KDE Telepathy"
-msgstr ""
+msgstr "KDE-Telepathy"
 
 #: KTp/Widgets/add-contact-dialog.cpp:89
 msgid "Add new contact"
-msgstr ""
+msgstr "Nieg Kontakt tofögen"
 
-#: KTp/Widgets/add-contact-dialog.cpp:141 KTp/Widgets/start-chat-dialog.cpp:79
+#: KTp/Widgets/add-contact-dialog.cpp:141 KTp/Widgets/start-chat-dialog.cpp:83
 msgid "No account selected."
 msgstr ""
 
@@ -763,7 +770,7 @@ msgstr ""
 
 #: KTp/Widgets/add-contact-dialog.cpp:172
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "Nieg Kontakt lett sik nich opstellen."
 
 #: KTp/Widgets/add-contact-dialog.cpp:189
 msgid "Failed to request presence subscription from the requested contact."
@@ -777,23 +784,23 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: KTp/Widgets/add-contact-dialog.ui:24 KTp/Widgets/start-chat-dialog.ui:24
 msgid "Screen Name:"
-msgstr ""
+msgstr "Wiesnaam:"
 
 #: KTp/Widgets/contact-grid-dialog.cpp:114
 msgid "Search in Contacts..."
 msgstr ""
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:208
+#: KTp/Widgets/join-chat-room-dialog.cpp:216
 msgid "This room is already in your favorites."
 msgstr ""
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:210
+#: KTp/Widgets/join-chat-room-dialog.cpp:218
 msgid "Add room"
-msgstr ""
+msgstr "Ruum tofögen"
 
-#: KTp/Widgets/join-chat-room-dialog.cpp:210
+#: KTp/Widgets/join-chat-room-dialog.cpp:218
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 #. i18n: ectx: property (windowTitle), widget (QWidget, JoinChatRoomDialog)
 #: KTp/Widgets/join-chat-room-dialog.ui:20
@@ -808,59 +815,64 @@ msgstr ""
 #. i18n: ectx: attribute (title), widget (QWidget, favoritesTab)
 #: KTp/Widgets/join-chat-room-dialog.ui:47
 msgid "Favorites"
-msgstr ""
+msgstr "Leevste"
 
 #. i18n: ectx: property (text), widget (QPushButton, addFavoritePushButton)
 #: KTp/Widgets/join-chat-room-dialog.ui:63
 msgid "Add Room"
-msgstr ""
+msgstr "Ruum tofögen"
+
+#. i18n: ectx: property (text), widget (QPushButton, editFavoritePushButton)
+#: KTp/Widgets/join-chat-room-dialog.ui:73
+msgid "Edit Room"
+msgstr "Ruum bewerken"
 
 #. i18n: ectx: property (text), widget (QPushButton, removeFavoritePushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:73
+#: KTp/Widgets/join-chat-room-dialog.ui:83
 msgid "Remove Room"
-msgstr ""
+msgstr "Ruum wegmaken"
 
 #. i18n: ectx: attribute (title), widget (QWidget, recentTab)
-#: KTp/Widgets/join-chat-room-dialog.ui:98
+#: KTp/Widgets/join-chat-room-dialog.ui:108
 msgid "Recent"
-msgstr ""
+msgstr "Tolest bruukt"
 
 #. i18n: ectx: property (text), widget (QPushButton, removeRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:112
+#: KTp/Widgets/join-chat-room-dialog.ui:122
 msgid "Remove"
-msgstr ""
+msgstr "Wegmaken"
 
 #. i18n: ectx: property (text), widget (QPushButton, clearRecentPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:122
+#: KTp/Widgets/join-chat-room-dialog.ui:132
 msgid "Clear list"
-msgstr ""
+msgstr "List leddig maken"
 
 #. i18n: ectx: attribute (title), widget (QWidget, queryTab)
 #. i18n: ectx: property (text), widget (QPushButton, queryPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:145
-#: KTp/Widgets/join-chat-room-dialog.ui:176
+#: KTp/Widgets/join-chat-room-dialog.ui:155
+#: KTp/Widgets/join-chat-room-dialog.ui:186
 msgid "Query"
-msgstr ""
+msgstr "Anfraag"
 
 #. i18n: ectx: property (text), widget (QLabel, serverLabel)
-#: KTp/Widgets/join-chat-room-dialog.ui:151
+#: KTp/Widgets/join-chat-room-dialog.ui:161
 msgid "Server to be queried:"
 msgstr ""
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, serverLineEdit)
-#: KTp/Widgets/join-chat-room-dialog.ui:163
+#: KTp/Widgets/join-chat-room-dialog.ui:173
 msgid "Leave blank for the selected account's default server"
 msgstr ""
 
 #. i18n: ectx: property (text), widget (QPushButton, stopPushButton)
-#: KTp/Widgets/join-chat-room-dialog.ui:186
+#: KTp/Widgets/join-chat-room-dialog.ui:196
 msgid "Stop"
-msgstr ""
+msgstr "Ophollen"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, filterBar)
-#: KTp/Widgets/join-chat-room-dialog.ui:217
+#: KTp/Widgets/join-chat-room-dialog.ui:227
 msgid "Search rooms"
-msgstr ""
+msgstr "Rüüm söken"
 
 #: KTp/Widgets/notification-config-dialog.cpp:43
 #: KTp/Widgets/notification-config-dialog.cpp:95
@@ -874,26 +886,32 @@ msgstr ""
 
 #: KTp/Widgets/notification-config-dialog.cpp:56
 msgid "All users"
-msgstr ""
+msgstr "All Brukers"
 
 #: KTp/Widgets/notification-config-dialog.cpp:98
 msgid "Configure notifications for all users"
 msgstr ""
 
-#: KTp/Widgets/start-chat-dialog.cpp:56
+#: KTp/Widgets/start-chat-dialog.cpp:60
 msgid "Start a chat"
-msgstr ""
+msgstr "Klönen starten"
 
-#: KTp/Widgets/start-chat-dialog.cpp:81
+#: KTp/Widgets/start-chat-dialog.cpp:85
 msgid ""
 "The requested account has been disconnected and so a chat could not be "
 "initiated."
 msgstr ""
 
-#: KTp/Widgets/start-chat-dialog.cpp:84
+#: KTp/Widgets/start-chat-dialog.cpp:88
 msgid "You did not specify the name of the contact to start a chat with."
 msgstr ""
 
-#: KTp/Widgets/start-chat-dialog.cpp:107
+#: KTp/Widgets/start-chat-dialog.cpp:106
+msgid ""
+"The contact Screen Name you provided is invalid or does not accept text "
+"chats."
+msgstr ""
+
+#: KTp/Widgets/start-chat-dialog.cpp:132
 msgid "Failed to start a chat with the contact."
 msgstr ""
