--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (0.8.1-1) UNRELEASED; urgency=low
+ktp-common-internals (0.8.1-1) unstable; urgency=low
 
   * Imported upstream 0.8.1
   * Bump libktpcommoninternalsprivate6 SONAME to 7
@@ -12,7 +12,7 @@ ktp-common-internals (0.8.1-1) UNRELEASED; urgency=low
   * Fix description typo (Closes: #745313, #745314)
   * Update debian/copyright
 
- -- Diane Trout <diane@ghic.org>  Sun, 27 Apr 2014 09:53:04 -0700
+ -- Diane Trout <diane@ghic.org>  Sun, 18 May 2014 21:28:24 -0700
 
 ktp-common-internals (0.7.0-1) unstable; urgency=low
 
