--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ktp-common-internals (0.8.80-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Update libktpcommoninternalsprivate7 SONAME to 8
+    - libktploggerprivate7 -> libktploggerprivate8
+    - libktpmodelsprivate7 -> libktpmodelsprivate8
+    - libktpwidgetsprivate7 -> libktpwidgetsprivate8
+
+ -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
+
 ktp-common-internals (0.8.1-2) unstable; urgency=medium
 
   * Fix typo in copyright file.
