--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ktp-common-internals (0.8.80-1) UNRELEASED; urgency=medium
     - libktpwidgetsprivate7 -> libktpwidgetsprivate8
   * Bump libtelepathy-qt4-dev build-depends to 0.9.5
   * Remove shared-desktop-ontolgies build-dep
+  * Bump libkpeople build-dep to 0.3.0
 
  -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
 
