--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ktp-common-internals (0.8.1-3) UNRELEASED; urgency=medium
 
+  * Update kde-telepathy-kpeople description.
 
  -- Diane Trout <diane@ghic.org>  Tue, 21 Oct 2014 21:04:01 -0700
 
