--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ ktp-common-internals (0.8.80-1) UNRELEASED; urgency=medium
   * Remove shared-desktop-ontolgies build-dep
   * Bump libkpeople build-dep to 0.3.0
   * Update kde-telepathy-kpeople description.
+  * Make kde-telepathy-kpeople a dependency.
 
  -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
 
