--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ktp-common-internals (0.8.80-1) UNRELEASED; urgency=medium
   * Bump libkpeople build-dep to 0.3.0
   * Update kde-telepathy-kpeople description.
   * Make kde-telepathy-kpeople a dependency.
+  * Add libotr5-dev and libgcrypt11-dev build-dep to enable OTR support.
 
  -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
 
