--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ ktp-common-internals (0.8.80-1) UNRELEASED; urgency=medium
   * Update kde-telepathy-kpeople description.
   * Make kde-telepathy-kpeople a dependency.
   * Add libotr5-dev and libgcrypt11-dev build-dep to enable OTR support.
+  * Add kpeople_chat_plugin.so and associated desktop file to 
+    kde-telepathy-kpeople package.
 
  -- Diane Trout <diane@ghic.org>  Tue, 16 Sep 2014 22:03:11 -0700
 
