Fix typo thanks Filipus Klutiero (Closes: #759756)
Conflicts:
	debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ktp-common-internals (0.8.1-3) UNRELEASED; urgency=medium
 
   * Update kde-telepathy-kpeople description.
+  * Fix typo thanks Filipus Klutiero (Closes: #759756)
 
  -- Diane Trout <diane@ghic.org>  Tue, 21 Oct 2014 21:04:01 -0700
 
