--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+ktp-common-internals (0.8.1-3) UNRELEASED; urgency=medium
+
+
+ -- Diane Trout <diane@ghic.org>  Tue, 21 Oct 2014 21:04:01 -0700
+
 ktp-common-internals (0.8.1-2) unstable; urgency=medium
 
   * Fix typo in copyright file.
