--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-ktp-common-internals (0.9.0-0ubuntu1) UNRELEASED; urgency=medium
+ktp-common-internals (0.9.0-0ubuntu2) vivid; urgency=medium
+
+  * Make -dev package depend on libktpotrprivate8
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Nov 2014 16:10:47 +0100
+
+ktp-common-internals (0.9.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
   * Merge with Debian, no changes
