--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ ktp-common-internals (0.9.0-1) UNRELEASED; urgency=medium
   * New upstream release
   * Merge with Debian, no changes
   * Make -dev package depend on libktpotrprivate8
+  * kde-telepathy-kpeople breaks/replaces old kde-telepathy-data
 
   [ Diane Trout ]
   Pull changes from kubuntu.
