--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktp-common-internals (0.9.0-0ubuntu3) vivid; urgency=medium
+
+  * kde-telepathy-kpeople breaks/replaces old kde-telepathy-data
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 05 Nov 2014 12:27:52 +0100
+
 ktp-common-internals (0.9.0-0ubuntu2) vivid; urgency=medium
 
   * Make -dev package depend on libktpotrprivate8
